@@ -60,3 +60,6 @@
 - Admins can now approve and reject suggested subjects
 
 + 
+
+- Quotes no longer break the whole proposal admin panels when put in proposals.
+- 
